[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Entity/Main/Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Maps/CTutorial0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main/Tutorial.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Entity/Enemies/Skull/Skull.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Cutscene/Dialogs.tscn" type="PackedScene" id=5]

[node name="Tutorial" type="Node2D"]
modulate = Color( 0.313726, 0.392157, 0.54902, 1 )
script = ExtResource( 3 )

[node name="CTutorial0" parent="." instance=ExtResource( 2 )]

[node name="MainCharacter" parent="." instance=ExtResource( 1 )]
position = Vector2( 464, 600 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Skull" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 464, -360 )

[node name="Skull2" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 280, -1000 )

[node name="Skull3" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 620, -1000 )

[node name="Dialogs" parent="." instance=ExtResource( 5 )]
